fix text overflow in Lesson card

--- a/css/lesson.css
+++ b/css/lesson.css
@@ -2,7 +2,7 @@
 {
     padding: 5px;
     border: 1px solid #c0c0c0;
-    height: 50px;
+    min-height: 50px;
     margin-bottom: 10px;
     cursor: pointer;
 }
